fix: hovering footer and options stretching

--- a/client/src/styles/global/_recipe.scss
+++ b/client/src/styles/global/_recipe.scss
@@ -1,3 +1,13 @@
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.recipe-main {
+  flex-grow: 1;
+}
+
 .recipe__title {
   font-family: $font-family-secondary;
   font-weight: $font-weight-bold;
@@ -154,6 +164,7 @@ input[type="checkbox"]:checked+label::before {
 .info__categories {
   display: grid;
   row-gap: 5px;
+  grid-auto-rows: max-content;
 }
 
 .category__item  {
